2009-08-08  Yoni Rabkin  <yoni@rabkins.net>

	* net/net-utils.el (net-utils-font-lock-keywords): New var.
	(nslookup-font-lock-keywords): Make it a variable.
	(net-utils-mode): New mode for viewing diagnostic network output.
	(net-utils-remove-ctrl-m-filter): Set inhibit-read-only.
	(net-utils-run-simple): New function.
	(ifconfig, iwconfig, netstat, arp, route): Use it.

2009-08-08  Dmitry Dzhus  <dima@sphinx.net.ru>

	* progmodes/gdb-mi.el (gdb-read-memory-custom)
	(gdb-memory-set-address, def-gdb-set-positive-number)
	(def-gdb-memory-format, def-gdb-memory-unit): Update memory buffer
	after changing settings.
	(gdb-invalidate-disassembly): Update when first shown.
	(gdb-edit-locals-value): Fixed.
	(gdb-registers-handler-custom): Print registers in right order and
	allow changing register values (only for current thread yet).
	(gdb-breakpoints-mode-map): Don't assume threads buffer is present.
	(gdb-threads-mode-map): Don't assume breakpoints buffer is present.
	(gdb-disassembly-handler-custom, gdb-stack-list-frames-custom)
	(gdb-locals-handler-custom, gdb-registers-handler-custom): Thread
	info in mode name.
	(gdb-registers-mode-map): TAB to switch to locals.

2009-08-08  Eli Zaretskii  <eliz@gnu.org>

	* mail/rmail.el (rmail-add-mbox-headers)
	(rmail-set-message-counters-counter): Search for
	rmail-unix-mail-delimiter instead of just "From ".  (Bug#4076)

2009-08-08  Glenn Morris  <rgm@gnu.org>

	* Makefile.in (ELCFILES): Update.

2009-08-07  Eli Zaretskii  <eliz@gnu.org>

	* mail/sendmail.el (mail-yank-original): Set
	buffer-file-coding-system from the one used by the message whose
	text is yanked.

	* calc/calc-graph.el (calc-graph-plot): Set calc-graph-last-device
	to "windows" when "pgnuplot" is used.
	(calc-graph-command, calc-gnuplot-command, calc-graph-init): Don't
	call accept-process-output if "pgnuplot" is used.
	(calc-graph-init): Don't send -display and -geometry to
	"pgnuplot".  If "pgnuplot" is used, glean gnuplot version by